--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -4,18 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>French Onion Soup Recipe</title>
+    <link rel="stylesheet" href="D:\Users\admloc-ahossi\lab-css-recipes-clone\french-soup\styles\style.css">
     <!-- don't forget to link your styles -->
   </head>
+  <header>
+    <div class="background">
+      <p class="header">French Onion Soup</p>
+    </div> 
+  <!--<div class="container"> <img class="onionsoup"src="D:\Users\admloc-ahossi\lab-css-recipes-clone\french-soup\images\soup.jpg" 
+      alt="onion soupe"> <div class="textonion">French Onion Soup</div> </div> !--> 
+  </header>
   <body>
-    French Onion Soup We have been trying French onion soup in restaurants for years and my family and friends agree
-    none can compare to my recipe for taste and simplicity of preparation. Ingredients 1/2 cup unsalted butter 2
-    tablespoons olive oil 4 cups sliced onions 4 (10.5 ounce) cans beef broth 2 tablespoons dry sherry (optional) 1
-    teaspoon dried thyme salt and pepper to taste 4 slices French bread 4 slices provolone cheese 2 slices Swiss cheese,
-    diced 1/4 cup grated Parmesan cheese Directions Melt butter with olive oil in an 8 quart stock pot on medium heat.
-    Add onions and continually stir until tender and translucent. Do not brown the onions. Add beef broth, sherry and
-    thyme. Season with salt and pepper, and simmer for 30 minutes. Heat the oven broiler. Ladle soup into oven safe
-    serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). Layer
-    each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls
-    on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.
+  <div> 
+   <p class="firstparagraph"> We have been trying French onion soup in restaurants for years and my family and friends agree
+    none can compare to my recipe for taste and simplicity of preparation.</p>
+    <img class="recipeinfo"src="D:\Users\admloc-ahossi\lab-css-recipes-clone\french-soup\images\recipe-info.png" 
+      alt="recipe info">
+  </div>
+   <div> <h3>Ingredients</h3> 
+    <ul class="list">
+    <li> 1/2 cup unsalted butter</li>
+    <li> 2 tablespoons olive oil </li>
+      <li> 4 cups sliced onions</li> 
+        <li>4 (10.5 ounce) cans beef broth </li>
+          <li>2 tablespoons dry sherry (optional) </li>
+            <li>1 teaspoon dried thyme </li>
+              <li>salt and pepper to taste </li>
+                <li>4 slices French bread </li>
+                  <li>4 slices provolone cheese </li>
+                    <li>2 slices Swiss cheese,diced </li>
+                      <li> 1/4 cup grated Parmesan cheese </li>
+  </ul>
+   <div class="Directions"><h3>Directions</h3>
+    <p class="secondparagraph"> Melt butter with olive oil in an 8 quart stock pot on medium heat.
+      Add onions and continually stir until tender and translucent. 
+      Do not brown the onions. 
+      Add beef broth, sherry and thyme. 
+      Season with salt and pepper, and simmer for 30 minutes. 
+      Heat the oven broiler. 
+      Ladle soup into oven safe serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). 
+      Layer each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. 
+      Place bowlson cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.</p>
+  </div>
   </body>
 </html>
